# uiplay

./: .env.example  .gitignore  README.md  package.json  vite.config.ts
.github/workflows/: main.yml
adapters/static/: vite.config.ts
src/: global.css  root.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml.example
src-tauri/capabilities/: default.json
src-tauri/src/: cdn.rs  discord.rs  events.rs  lib.rs  listen.rs  mediaplayer.rs  shairport.rs  uxplay.rs
src-tauri/src/events/: album.rs  album_art.rs  artist.rs  audio_progress.rs  connection_request.rs  genre.rs  title.rs
src/components/: Head.tsx  Nav.tsx
src/routes/: index.tsx  layout.tsx
src/routes/settings/: index.tsx
src/util/: listen.ts  types.ts
src/util/events/: accepted.ts  album.ts  albumArt.ts  artist.ts  clientIdentified.ts  connectionClosed.ts  connectionRequest.ts  genre.ts  index.ts  progress.ts  startAudioConnection.ts  title.ts
worker/: .env.example  package.json  tsconfig.json  wrangler.jsonc
worker/src/: index.ts
