[package]
name = "uiplay"
version = "0.5.0"
description = "UiPlay"
authors = ["saboooor"]
license = ""
repository = "https://github.com/LuminescentDev/uiplay.git"
edition = "2024"
rust-version = "1.96.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
discord-rich-presence = "1.1.0"
regex = "1.12.4"
reqwest = { version = "0.13.4", features = ["query"] }
dotenvy = "0.15.7"
